--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_activity_wizard">WizardActivity</string>
     <string name="next_wizard">Next</string>
     <string name="skip">Skip</string>
+    <string name="customerInfo">Customer Information</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
